--- a/TaskTwo/TaskTwo.csproj
+++ b/TaskTwo/TaskTwo.csproj
@@ -10,4 +10,10 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
