Задача 9. Создано и протестировано подключение к PostgreSQL

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Task3/bin/
 Task3/obj/
 Task3/
 TaskFour/obj/
+TaskFour/bin/Debug/net8.0/pl/Microsoft.CodeAnalysis.CSharp.resources.dll
+TaskFour/bin/
